--- a/tools.html
+++ b/tools.html
@@ -245,30 +245,29 @@
     </div>
 </div>
 
-            <div class="tool-container" id="colorTool" style="display: none;">
-    <div class="container">
-        <button class="back-button"><i class="fas fa-arrow-left"></i> Kembali</button>
-        <h2>Color Picker</h2>
-        <div class="color-picker-tool">
-            <div class="upload-area">
-                <input type="file" id="imageUpload" accept="image/*">
-                <label for="imageUpload" class="upload-label">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <p>Unggah Gambar atau Tarik ke sini</p>
-                </label>
-                <canvas id="imageCanvas" style="display: none;"></canvas>
-            </div>
-            <div class="color-results" id="colorResults" style="display: none;">
-                <h3>Warna yang Diekstrak:</h3>
-                <div class="color-grid" id="colorGrid"></div>
-                <div class="selected-color">
-                    <div class="color-box" id="selectedColorBox"></div>
-                    <div class="color-info">
-                        <p>HEX: <span id="hexValue">#000000</span></p>
-                        <p>RGB: <span id="rgbValue">rgb(0, 0, 0)</span></p>
-                        <button id="copyColor" class="copy-btn">Salin HEX</button>
-                    </div>
-                </div>
+            <div class="color-picker-tool">
+    <div class="upload-area">
+        <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+        <label for="imageUpload" class="upload-label">
+            <i class="fas fa-cloud-upload-alt"></i>
+            <h3>Upload an Image</h3>
+            <p>Drag & drop an image file here or click to browse</p>
+        </label>
+        <img id="previewImage" alt="Preview">
+    </div>
+    
+    <div class="color-results">
+        <h3>Color Palette</h3>
+        <div id="colorGrid" class="color-grid"></div>
+        
+        <div class="selected-color">
+            <div class="color-box" id="colorBox"></div>
+            <div class="color-info">
+                <p>Selected Color:</p>
+                <p id="colorValue">#FFFFFF</p>
+                <button id="copyBtn" class="copy-btn">
+                    <i class="fas fa-copy"></i> Copy Color
+                </button>
             </div>
         </div>
     </div>
