--- a/tools.html
+++ b/tools.html
@@ -203,6 +203,13 @@
         </div>
     </div>
 </div>
+
+            <div class="tool-card" id="json-generator">
+    <h3>JSON Generator</h3>
+    <textarea id="json-input" placeholder="Masukkan data Anda di sini..." rows="5"></textarea>
+    <button onclick="generateJSON()">Generate JSON</button>
+    <div id="json-output"></div>
+</div>
     
             <div class="tool-container" id="converterTool" style="display: none;">
     <div class="container">
