--- a/tools.html
+++ b/tools.html
@@ -75,6 +75,15 @@
                         <button class="cta-button tool-btn" data-tool="instagram">Buka Tool</button>
                     </div>
 
+                    <div class="tool-card" data-category="web">
+    <div class="tool-icon">
+        <i class="fas fa-code"></i>
+    </div>
+    <h3>JSON Generator</h3>
+    <p>Buat, format, dan validasi data JSON dengan mudah</p>
+    <button class="cta-button tool-btn" data-tool="json">Buka Tool</button>
+</div>
+
                     
                     <div class="tool-card" data-category="game">
                         <div class="tool-icon">
