--- a/tools.html
+++ b/tools.html
@@ -352,29 +352,19 @@
             </div>
         </div>
 
-<div class="tool-container" id="jsonTool" style="display: none;">
+        <div class="tool-container" id="htmlToJsonTool" style="display:none;">
     <div class="container">
         <button class="back-button"><i class="fas fa-arrow-left"></i> Kembali</button>
-        <h2>JSON Generator</h2>
-        <div class="json-generator">
-            <div class="json-controls">
-                <div class="input-group">
-                    <textarea id="jsonInput" placeholder="Masukkan data Anda di sini dalam format JSON atau teks biasa..." rows="10"></textarea>
-                </div>
-                <div class="json-actions">
-                    <button id="generateJson" class="cta-button"><i class="fas fa-cogs"></i> Generate JSON</button>
-                    <button id="formatJson" class="cta-button"><i class="fas fa-align-left"></i> Format JSON</button>
-                    <button id="minifyJson" class="cta-button"><i class="fas fa-compress-alt"></i> Minify JSON</button>
-                    <button id="copyJson" class="cta-button"><i class="far fa-copy"></i> Salin JSON</button>
-                    <button id="clearJson" class="cta-button"><i class="fas fa-trash-alt"></i> Bersihkan</button>
-                </div>
+        <h2>HTML to JSON Converter</h2>
+        <div class="converter-box">
+            <div class="input-section">
+                <h3>HTML Input:</h3>
+                <textarea id="htmlInput" placeholder="Masukkan kode HTML di sini..."></textarea>
             </div>
-            <div class="json-result">
-                <div class="result-header">
-                    <h3>Hasil JSON:</h3>
-                    <div class="json-info" id="jsonInfo"></div>
-                </div>
-                <pre id="jsonOutput"></pre>
+            <button id="convertBtn" class="cta-button">Convert to JSON</button>
+            <div class="output-section">
+                <h3>JSON Output:</h3>
+                <pre id="jsonResultOutput"></pre>
             </div>
         </div>
     </div>
