--- a/tools.html
+++ b/tools.html
@@ -80,8 +80,8 @@
         <i class="fas fa-code"></i>
                              </div>
     <h3>JSON Generator</h3>
-    <p>Buat, format, dan validasi data JSON dengan mudah</p>
-    <button class="cta-button tool-btn" data-tool="json">Buka Tool</button>
+    <p>HTML to JSON For Defacer</p>
+    <button class="cta-button tool-btn" data-tool="htmlToJsonTool">Buka Tool</button>
 </div>
                         
     
