--- a/tools.html
+++ b/tools.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i> Beranda</a></li>
                     <li><a href="tools.html" class="active"><i class="fas fa-tools"></i> Tools</a></li>
-                    <li><a href="donate.html"><i class="fas fa-heart"></i> Donasi</a></li>
+                    <li><a href="donate.html"><i class="fas fa-heart"></i> Sawer</a></li>
                 </ul>
             </nav>
             <div class="menu-toggle">
