--- a/tools.html
+++ b/tools.html
@@ -75,6 +75,17 @@
                         <button class="cta-button tool-btn" data-tool="instagram">Buka Tool</button>
                     </div>
 
+                    <div class="tool-card" data-category="ai">
+    <div class="tool-icon">
+        <i class="fas fa-robot"></i>
+    </div>
+    <h3>D-AI V.01</h3>
+    <p>Chat AI cerdas berbahasa Indonesia (Coming Soon)</p>
+    <a href="chat.html" class="cta-button">
+        <i class="fas fa-comments"></i> Chat Sekarang
+    </a>
+</div>
+
                     <div class="tool-card" data-category="web">
     <div class="tool-icon">
         <i class="fas fa-layer-group"></i>
