--- a/chat.html
+++ b/chat.html
@@ -399,9 +399,9 @@
                     "Saya D-AI V.01, asisten virtual cerdas yang siap membantu Anda kapan saja."
                 ],
                 creator: [
-                    "Saya dikembangkan oleh tim SMKN 1 Ngabang sebagai proyek inovasi digital.",
-                    "Saya dibuat oleh siswa dan guru SMKN 1 Ngabang untuk membantu dalam pembelajaran.",
-                    "Pengembang saya berasal dari SMKN 1 Ngabang yang menciptakan saya untuk berbagai keperluan."
+                    "Saya dikembangkan oleh DaengXploit sebagai proyek inovasi digital.",
+                    "Saya dibuat oleh DaengXploit untuk membantu dalam pembelajaran.",
+                    "Pengembang saya DaengXploit yang menciptakan saya untuk berbagai keperluan."
                 ],
                 capabilities: [
                     "Saya bisa menjawab pertanyaan, mencari informasi, dan membantu berbagai kebutuhan Anda dalam bahasa Indonesia maupun bahasa lainnya.",
