--- a/tools.html
+++ b/tools.html
@@ -80,7 +80,7 @@
         <i class="fas fa-robot"></i>
     </div>
     <h3>D-AI V.01</h3>
-    <p>Chat AI cerdas berbahasa Indonesia (Coming Soon)</p>
+    <p>Chat AI cerdas berbahasa Indonesia (Dalam Pengembangan)</p>
     <a href="chat.html" class="cta-button">
         <i class="fas fa-comments"></i> Chat Sekarang
     </a>
