--- a/chat.html
+++ b/chat.html
@@ -5,47 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D-AI V.01 - Chat Publik</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <div class="chat-container">
+    <div class="chat-app">
         <header class="chat-header">
-            <div class="logo">
-                <i class="fas fa-robot"></i>
-                <h1>D-AI V.01</h1>
-            </div>
-            <div class="status">
-                <span class="status-dot online"></span>
-                <span>Online</span>
+            <div class="header-content">
+                <div class="logo">
+                    <i class="fas fa-robot"></i>
+                    <h1>D-AI V.01</h1>
+                </div>
+                <div class="status">
+                    <span class="status-dot online"></span>
+                    <span>Online</span>
+                </div>
             </div>
         </header>
 
-        <div class="chat-display" id="chatDisplay">
-            <div class="welcome-message">
-                <h3>Halo!</h3>
-                <p>Saya D-AI, asisten AI berbahasa Indonesia</p>
+        <div class="chat-container">
+            <div class="chat-display" id="chatDisplay">
+                <div class="welcome-message">
+                    <h3>Halo!</h3>
+                    <p>Saya D-AI, asisten AI berbahasa Indonesia</p>
+                </div>
             </div>
-        </div>
-
-        <div class="input-area">
-            <input type="text" id="userInput" placeholder="Ketik pesan Anda...">
-            <button id="sendButton"><i class="fas fa-paper-plane"></i></button>
+            
+            <div class="input-area">
+                <button class="help-btn" id="helpButton">
+                    <i class="fas fa-question-circle"></i>
+                </button>
+                <input type="text" id="userInput" placeholder="Ketik pesan Anda..." autocomplete="off">
+                <button class="send-btn" id="sendButton">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
-    <script>
-    // Inisialisasi chat
-    document.addEventListener('DOMContentLoaded', function() {
-        const chatSystem = new DAIChatSystem();
-        
-        document.getElementById('sendButton').addEventListener('click', function() {
-            const input = document.getElementById('userInput').value;
-            if(input.trim() !== '') {
-                chatSystem.processUserInput(input);
-            }
-        });
-    });
-    </script>
 </body>
 </html>
