--- a/secure.html
+++ b/secure.html
@@ -5,25 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D-AI - Mode Pengembangan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <style>
-    /* Tambahan style khusus secure */
-    .ai-panel {
-        background: #1e1e2d;
-        border-radius: 10px;
-        padding: 15px;
-        margin: 10px 0;
-    }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <div class="dev-container">
-        <header>
+    <div class="dev-app">
+        <header class="dev-header">
             <h1><i class="fas fa-brain"></i> RUANG PENGEMBANGAN AI</h1>
             <p class="warning">Mode Pelatihan - Tidak untuk interaksi manusia</p>
         </header>
 
-        <div class="ai-training-panel">
+        <div class="ai-training">
             <div class="ai-panel" id="ai1">
                 <h2>AI-ALPHA <span class="status-badge">Aktif</span></h2>
                 <div class="ai-output" id="ai1Output"></div>
@@ -34,15 +26,26 @@
                 <div class="ai-output" id="ai2Output"></div>
             </div>
         </div>
+
+        <div class="metrics">
+            <h3>METRIK KECERDASAN</h3>
+            <div class="metric-bars">
+                <div class="metric">
+                    <label>Pemahaman Bahasa</label>
+                    <div class="bar"><span class="progress" style="width: 75%"></span></div>
+                </div>
+                <div class="metric">
+                    <label>Penalaran Logis</label>
+                    <div class="bar"><span class="progress" style="width: 68%"></span></div>
+                </div>
+                <div class="metric">
+                    <label>Kosakata</label>
+                    <div class="bar"><span class="progress" style="width: 82%"></span></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
-    <script>
-    // Inisialisasi mode pengembangan
-    document.addEventListener('DOMContentLoaded', function() {
-        const aiSystem = new DAITrainingSystem();
-        aiSystem.startTrainingSession();
-    });
-    </script>
 </body>
 </html>
