--- a/chat.html
+++ b/chat.html
@@ -1,19 +1,1 @@
-<div class="conscious-chat">
-    <div class="neural-header">
-        <div class="consciousness-tracker">
-            <span>Neural Activity: </span>
-            <div class="consciousness-indicator" style="--consciousness-level: 0.87"></div>
-        </div>
-    </div>
-    
-    <div class="message-container" id="messageContainer">
-        <!-- Messages appear here with neural activity -->
-    </div>
-    
-    <form id="chatForm" class="quantum-input">
-        <input type="text" id="userInput" placeholder="Type to stimulate neural activity...">
-        <button type="submit">
-            <i class="fas fa-brain"></i> Transmit
-        </button>
-    </form>
-</div>
+dalam perbaikan
