--- a/chat.html
+++ b/chat.html
@@ -29,6 +29,16 @@
             </button>
         </div>
 
+        <div id="historyModal" class="modal hidden">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3>Riwayat Percakapan</h3>
+            <button id="closeHistoryModal" class="close-btn">&times;</button>
+        </div>
+        <div class="history-list" id="historyList"></div>
+    </div>
+</div>
+   
         <!-- Chat Area -->
         <div class="chat-display" id="chatDisplay">
             <!-- Messages will appear here -->
